[package]
name = "blitz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.33.0"
async-trait = "0.1.68"
serde_json = "1.0.97"
enum_primitive = "*"
nix = "0.26.2"
tokio = { version = "1", features = ["full"] }
dns-lookup = "2.0.2"
sqlite = "0.31.0"
chrono = "0.4.26"
futures = "0.3.5"